--- a/style.css
+++ b/style.css
@@ -178,3 +178,11 @@ nav ul li a::after{
   width: 30%;
   border-radius: 40px;
 }
+table {
+  border: 1px solid black;
+}
+
+th,
+td {
+  border: 1px solid black;
+}
